<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cn</groupId>
    <artifactId>minimalist-saas</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>minimalist-basic</module>
        <module>minimalist-application</module>
    </modules>

    <properties>
        <!-- springboot版本 -->
        <springboot.version>3.1.1</springboot.version>
        <!-- redisson版本 -->
        <redisson.version>3.36.0</redisson.version>
        <!-- mysql驱动版本 -->
        <mysql.version>8.0.33</mysql.version>
        <!-- mybatis-plus版本 -->
        <mp.version>3.5.3.1</mp.version>
        <!-- mybatis-plus 生成代码 -->
        <mpg.version>3.5.3.1</mpg.version>
        <!-- mybatis-plus 生成代码依赖的velocity-engine-core版本 -->
        <vec.version>2.3</vec.version>
        <!-- hutool工具包 -->
        <hutool.version>5.8.32</hutool.version>
        <!-- sa-token -->
        <satoken.version>1.39.0</satoken.version>
        <!-- knife4j -->
        <knife4j.version>4.1.0</knife4j.version>
        <!-- spring-file -->
        <spring-file.version>2.2.1</spring-file.version>
        <!-- mica-xss -->
        <mica-xss.version>3.3.2</mica-xss.version>
        <!-- TTL -->
        <ttl.version>2.14.3</ttl.version>
        <!-- java -->
        <java.version>17</java.version>
        <!-- maven.compiler -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- 项目打包名称 -->
        <project.package.name>minimalist-saas-backend</project.package.name>
        <!-- 编码 -->
        <project.package.encoding>UTF-8</project.package.encoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- springboot统一依赖管理 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 项目中依赖的包从哪里下载 -->
    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <!-- 项目中所使用的maven插件从哪里下载 -->
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.package.encoding}</encoding>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

    </build>

    <profiles>
        <profile>
            <!--不同环境Profile的唯一id-->
            <id>dev</id>
            <!--默认激活dev 环境-->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- spring.profiles.active是在application.yml自定义的字段（名字随便起），自定义字段可以有多个，确保能对应上就行-->
                <spring.profiles.active>dev</spring.profiles.active>
            </properties>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <spring.profiles.active>prod</spring.profiles.active>
            </properties>
        </profile>
    </profiles>

</project>
